app/components/layout/StandaloneHeader/StandaloneHeader.module.css
.header {
  background-color: var(--background-back-color);
  padding: 40px 60px 30px 60px;
}

@media screen and (max-width: 1180px) {
  .header {
    padding-left: 20px;
  }
}

@media screen and (max-width: 768px) {
  .header {
    height: initial;
    display: flex;
    flex-direction: column;
    width: 100%;
    position: relative;
    padding-bottom: 30px;
    padding-top: 30px;
  }
}

